<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start_background"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="50dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp"
    tools:context="com.urbanmeals.client.urbanmeals.signup.SignUpActivity">

    <TextView
        android:id="@+id/SignUp_CreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create an account"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/SignUp_FirstNameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/firstname"
        android:textColorHint="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SignUp_CreateAccount">

        <EditText
            android:id="@+id/SignUp_FirstNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:inputType="textPersonName"
            android:textColor="@color/urbanMealsRed"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/Signup_LastNameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/lastname"
        android:textColorHint="@color/white"
        app:layout_constraintLeft_toLeftOf="@id/SignUp_FirstNameLayout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SignUp_FirstNameLayout">

        <EditText
            android:id="@+id/SignUp_LastNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:ems="25"
            android:inputType="textPersonName"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/Signup_EmailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        app:layout_constraintLeft_toLeftOf="@id/Signup_LastNameLayout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Signup_LastNameLayout">

        <EditText
            android:id="@+id/SignUp_EmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/Signup_PasswordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/loginPassword"
        android:textColorHint="@color/white"
        app:layout_constraintLeft_toLeftOf="@id/Signup_EmailLayout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Signup_EmailLayout">

        <EditText
            android:id="@+id/SignUp_PasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/SingUp_PhoneLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="Phone"
        android:textColorHint="@color/white"
        app:layout_constraintLeft_toLeftOf="@id/Signup_PasswordLayout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Signup_PasswordLayout">

        <EditText
            android:id="@+id/SignUp_PhoneInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:ems="10"
            android:inputType="phone"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="@string/acceptterms"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/SignUpButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SingUp_PhoneLayout" />

    <Button
        android:id="@+id/SignUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/background_strokeroundwhite"
        android:onClick="signUpButtonClick"
        android:text="@string/signup"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:transitionName="signUpButtonTransition"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="20dp" />

</android.support.constraint.ConstraintLayout>
